Revision history for Text-VimColor

{{$NEXT}}

0.15      2012-03-18T23:43:36Z

  [Performance]
  - Remove extraneous vim statement that caused delays on
    some files.  Thanks to Joe Mullally (jhackworth)
    for finding this and for the vim profiling tips (gh-2).

  [Installation]
  - Abort Makefile.PL before writing Makefile if minimum vim not found
  - Try not to hang the installation if an old vim is found
  - Lower Term::ANSIColor requirement to 1.03
    and make bright colors normal if Term::ANSIColor version < 3

  [Documentation]
  - Document that the minimum vim version is 6.
    (It has been that way since 2003.)

  [Testing]
  - Allow debugging based on TEXT_VIMCOLOR_DEBUG env var
  - Attempt to make tests more portable across vim versions
    (addressing rt-75829 and a few sparse smoke reports).
  - Reorganize the test suite increasing coverage and number.

0.14      2011-10-20T17:09:53Z

  - Add test to confirm fix of rt-50646.
  - Silence 'untie' warnings.

0.13      2011-08-15T23:10:00Z

  [Prereqs]
  - Exit Makefile.PL early if `vim` fails to execute.
    (Nothing else will work after that.)
  - Bump required version of Term::ANSIColor to 3.0.
    (Please let me know if this causes problems for anyone.)

  [Dist Meta Changes]
  - Convert to Dist::Zilla for releasing
  - Use File::ShareDir to manage included files consistently
  - Simplify and organize documentation and tests

0.12     2011-08-09T19:33:16Z

  [Enhancements]
  - Add Term::ANSIColor support
    Closes RT #69338.
  - Add '-n' (no swapfile) option (thanks hinrik.sig).
    Closes RT #45623.

  [Bug Fixes]
  - Set $ENV{HOME} to keep user-customized syntax files from
    breaking tests.  Closes RT #68513.
  - Untie STD(IN|OUT|ERR) in child process (thanks shiar).
    Closes RT #50646.

  [Maintenance Status Change]
  - Co-maintenance granted to Randy Stauner (RWSTAUNER) by PAUSE admins.
    Much appreciation to Geoff Richards (GEOFFR) for his initial work.

0.11     2006-02-19T19:32:27Z
