@@ -2,6 +2,8 @@ Revision history for Text-VimColor
 
 {{$NEXT}}
 
+  - Mark encoding tests as TODO tests for now (still under development)
+
 0.15      2012-03-18T23:43:36Z
 
   [Performance]
